--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .navbar-nav{
- 
   background-color: transparent;
   padding: 10px 20px;
   display: flex;
@@ -13,7 +12,31 @@
 
 .navbar-nav .nav-item {
     margin-left: 45px;
-  }
+}
+
+body {
+  background-image: url('../src/assets/wallpaper.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+
+.bg-blur{
+  backdrop-filter: blur(10px);
+}
+.text-yellow{
+  color: #E9CB97;
+}
+.btn-trans-white{
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.main-home-body{
+  height: 80vh;
+}
+.slider-caption{
+  text-shadow: 2px 2px 17px #000000;
+}
 
 
 
