--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=alternate_email');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=north_east');
+
 .navbar-nav{
   background-color: transparent;
   padding: 10px 20px;
@@ -14,16 +19,32 @@
     margin-left: 45px;
 }
 
-body {
+body, html {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  font-family: "Roboto", serif;
+}
+/* src/App.css or src/index.css */
+.home-page-background {
+  min-height: 100vh;
   background-image: url('../src/assets/wallpaper.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  min-height: 100vh;
+  background-attachment: fixed; /* This makes the background fixed while scrolling */
+  position: relative; /* For proper stacking context */
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
+
+/* If you still see any gaps, you might need to add these global styles */
+
 
 .bg-blur{
   backdrop-filter: blur(10px);
+  background-color: rgba(0, 0, 0, 0.52);
 }
 .text-yellow{
   color: #E9CB97;
@@ -36,6 +57,223 @@ body {
 }
 .slider-caption{
   text-shadow: 2px 2px 17px #000000;
+}
+.footer-header{
+  padding: 20px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.21);
+}
+.slider-header{
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.21);
+  width: fit-content;
+}
+.about-header{
+  padding: 2px 10px;
+  border-radius: 10px;
+  background-color: rgba(14, 107, 20, 0.31);
+  width: fit-content;
+}
+/* L O G I N & R E G I S T E R*/
+
+:root {
+  --mainColor: rgba(0, 197, 11, 0.31);
+  --black: #000000;
+  --white: #FFFFFF;
+  --whiteSmoke: #C4C3CA;
+  --shadow: 0px 4px 8px 0 rgba(21, 21, 21, .2);
+}
+
+.submit-btn {
+  height: 44px;
+  padding: 0px 30px;
+  background-color: var(--mainColor);
+  border-radius: 4px;
+  font-size: 13px;
+  font-weight: 600;
+  text-transform: uppercase;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--white);
+  letter-spacing: 1px;
+  border: none;
+  margin-top: 15px;
+  box-shadow: 0px 8px 24px 0 rgba(97, 228, 10, 0.2);
+  transition: all .2s linear;
+}
+
+.submit-btn:hover { background-color: var(--white); color: var(--mainColor); box-shadow: 0 8px 24px 0 rgba(138, 140, 146, .2); }
+
+
+.form {width: 100%; display: flex; justify-content: center; }
+.right h4 { font-weight: 600; color: var(--white); }
+.right h6 { color: var(--white); margin-bottom: 30px; }
+.right h6 span { padding: 0 20px; text-transform: uppercase; font-weight: 700; font-size: 16px; }
+
+input[type="checkbox"] { display: none; }
+.checkbox:checked + label, .checkbox:not(:checked) + label {
+  position: relative;
+  display: block;
+  text-align: center;
+  width: 60px;
+  height: 16px;
+  border-radius: 8px;
+  background-color: var(--mainColor);
+  padding: 0;
+  margin: 10px auto;
+  cursor: pointer;
+}
+a{
+  text-decoration: none !important;
+}
+.checkbox:checked + label::before, .checkbox:not(:checked) + label::before {
+  position: absolute;
+  display: block;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  color: white;
+  background-color: var(--white);
+  content: '\f1e2';
+  z-index: 20;
+  top: -10px;
+  left: -10px;
+  line-height: 36px;
+  text-align: center;
+  font-size: 24px;
+  transition: all .5s ease;
+}
+
+.checkbox:checked + label::before { transform: translateX(44px) rotate(-270deg); }
+
+.link { color: var(--whiteSmoke); margin-top: 20px; display: block; }
+.link:hover { color: var(--mainColor); }
+
+.card-3d-wrap {
+  position: relative;
+  width: 400px;
+  max-width: 100%;
+  height: 400px;
+  margin-top: 60px;
+  transform-style: preserve-3d;
+  perspective: 800px;
+}
+
+.card-3d-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform-style: preserve-3d;
+  transition: all .6s ease-out;
+}
+
+.checkbox:checked ~ .card-3d-wrap .card-3d-wrapper { transform: rotateY(180deg); }
+
+.card-front, .card-back {
+  width: 100%;
+  height: 100%;
+  background-color: #1B1B1B;
+  background-image: url('https://i.postimg.cc/4dnZCH03/background.png');
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  background-size: 300%;
+  position: absolute;
+  border-radius: 6px;
+  left: 0;
+  top: 0;
+  transform-style: preserve-3d;
+}
+
+.card-back { transform: rotateY(180deg); }
+
+.center-wrap {
+  position: absolute;
+  width: 100%;
+  padding: 0 35px;
+  top: 50%;
+  left: 0;
+  transform: translate3d(0, -50%, 35px) perspective(100px);
+  display: block;
+  z-index: 20;
+}
+
+.heading { margin-bottom: 20px; font-size: 24px; text-transform: uppercase; }
+.form-group { position: relative; display: block; margin-bottom: 10px; }
+.form-group input::placeholder { color: var(--whiteSmoke); opacity: .7; transition: all .2s linear; }
+.form-group input:focus::placeholder { opacity: 0; transition: all .2s linear; }
+
+.form-style {
+  padding: 13px 20px;
+  height: 48px;
+  width: 100%;
+  font-weight: 500;
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.5px;
+  outline: none;
+  color: var(--whiteSmoke);
+  background-color: #242323;
+  border: none;
+  box-shadow: var(--shadow);
+}
+
+.form-style:focus, .form-style:active { border: none; outline: none; box-shadow: var(--shadow); }
+
+.input-icon {
+  position: absolute;
+  top: 12px;
+  left: 18px;
+  height: 48px;
+  font-size: 24px;
+  text-align: left;
+  color: var(--mainColor);
+  transition: all .2s linear;
+}
+
+/*MEDIA QUERIES*/
+
+@media (max-width: 992px) {
+  nav .menu-btn i { display: block; }
+  nav .container { padding: 0; }
+  nav ul {
+    position: fixed;
+    top: 85px;
+    left: -100%;
+    background-color: #1B1B1B;
+    height: 320px;
+    width: 100%;
+    display: block;
+    text-align: center;
+    transition: all .3s ease;
+  }
+
+  #click:checked ~ ul { left: 0; }
+  nav ul li { margin: 20px 0; }
+  nav ul li a { display: block; font-size: 20px; }
+  nav ul li a.active, nav ul li a:hover { background: none; color: var(--mainColor); }
+
+  .left h2 { font-size: 40px; }
+  .left h2 span { font-size: 42px; }
+  .left p { font-size: 14px; }
+  .card-3d-wrap { width: 350px; }
+}
+
+@media (max-width: 768px) {
+  .left, .right { flex: 0 0 100%; max-width: 100%; }
+  .left { display: grid; place-items: center; order: 2;}
+  .right { order: 1; }
+  .left h2 { text-align: center; }
+}
+
+@media (max-width: 400px) {
+  .left h2 { font-size: 28px; }
+  .left h2 span { font-size: 30px; }
+  .card-3d-wrap { width: 300px; }
 }
 
 
